Fix for issue #6: https://github.com/tham7107/final-project-assignment-tham7107/issues/6
Add soil-mon-app/soil-monitor.c and i2c-soil-drv/i2c-soil-drv-api. Move
API-related i2c driver defines from i2c-soil-drv/i2c-soil-drv-int.h
to i2c-soil-drv/i2c-soil-drv-api.h. Add include of api.h to main.c.
Update soil-mon-app/Makefile to build soil-monitor. Change exit(1)
to exit(EXIT_FAILURE) in gpio-test.c

--- a/soil-mon-app/Makefile
+++ b/soil-mon-app/Makefile
@@ -5,17 +5,16 @@
 ## July 2023
 ##
 
-#CC ?= $(CROSS_COMPILE)gcc
-#CFLAGS ?= -Wall -Werror -g
-#LDFLAGS ?= -pthread
+# Must use override for variables passed in on the make command line.
+# https://www.gnu.org/software/make/manual/html_node/Override-Directive.html
+override CFLAGS += -I../i2c-soil-drv
 
-#all: soil-monitor gpio-test
-all: gpio-test
+all: soil-monitor gpio-test
 
 clean:
 	rm -f soil-monitor *.o
 
-soil-monitor: gpio.o
+soil-monitor: gpio.o soil-monitor.o
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 gpio-test: gpio.o gpio-test.o
