Fix for issue #7: https://github.com/tham7107/final-project-assignment-tham7107/issues/7
Add support for MQTT to soil-monitor.c. Add -l paho-mqtt3c to
LDFLAGS in Makefile.

--- a/soil-mon-app/Makefile
+++ b/soil-mon-app/Makefile
@@ -8,6 +8,8 @@
 # Must use override for variables passed in on the make command line.
 # https://www.gnu.org/software/make/manual/html_node/Override-Directive.html
 override CFLAGS += -I../i2c-soil-drv
+# paho-mqtt3c is MQTTClient, paho-mqtt3a is MQTTAsync
+override LDFLAGS += -l paho-mqtt3c
 
 all: soil-monitor gpio-test
 
